[package]
name = "eigen-gevulot-e2e-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Gevulot Test Programs"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"


[dependencies]
gevulot-node = { git = "https://github.com/gevulotnetwork/gevulot" }
images = { path = "../../images" }

libsecp256k1 = "0.7"
blake3 = { version = "1.5", features = [ "mmap" ] }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.0"
clap = { package = "clap", version = "4.3.4", features = ["derive"] }

env_logger = "0.10"

sha3 = "0.10"
url = "2.5.0"
hex = "0.4"

futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
indicatif = "0.17.7"
tracing-subscriber = "0.3.18"
tokio-util = "0.7"

