[package]
name = "eigen-gevulot-test-programs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Eigen Gevulot Test Programs"
documentation = "https://eigen.cash"
homepage = "https://eigen.cash"


[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[dependencies]
starky = { package="starky", path = "../../eigen-zkvm/starky", version = "0.0.1" }
clap = { package = "clap", version = "4.3.4", features = ["derive"] }
num-traits = "0.2.8"
rand = "0.4"
gevulot-shim = { path = "../../gevulot/crates/shim" }
gevulot-common = { path = "../../gevulot/crates/common" }

# error and log
log = "0.4.0"
env_logger = "0.10"
anyhow = { version = "1.0", default-features = false }

[features]
default = []
